--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,12 +10,12 @@
     },
     { "taskName": "test-current",
       "command": "make",
-      "args": ["sh/test.sh", "${relativeFile}"],
-      "group": { "kind": "test", "isDefault": true }
+      "args": ["sh/test.sh", "${relativeFile}"]
     },
     { "taskName": "test",
       "command": "make",
-      "args": ["test"]
+      "args": ["test"],
+      "group": { "kind": "test", "isDefault": true }
     }
   ]
 }
