update vscode tasks to use craft.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,16 +6,17 @@
       "command": "make",
       "args": ["build"],
       "group": { "kind": "build", "isDefault": true },
-      "problemMatcher": "$plumage-swift"
+      "problemMatcher": "$craft"
     },
     { "taskName": "test-current",
-      "command": "make",
-      "args": ["sh/test.sh", "${relativeFile}"]
+      "group": { "kind": "test", "isDefault": true },
+      "command": "craft-swift-utest",
+      "args": ["${relativeFile}"]
     },
     { "taskName": "test",
       "command": "make",
       "args": ["test"],
-      "group": { "kind": "test", "isDefault": true }
+      "problemMatcher": "$craft"
     }
   ]
 }
